# python-project-template-test001

./: .pre-commit-config.yaml  README.md  commitlint.config.cjs  package.json  pnpm-lock.yaml  pyproject.toml
.github/: pull_request_template.md  release.yml
.github/workflows/: release.yml
docs/: development.md
docs/developer/: CHANGELOG.md
scripts/hooks/: check-branch-name.sh
